# Bob

./: .gitignore  CMakeLists.txt  Engine.sln  Makefile  Scene.cpp  Scene.h  main.cpp
Assets/Model/: Monkey.blend  Monkey.blend1  test.blend  test.blend1
Assets/Shader/: fragment.glsl  fragmentCol.glsl  fragmentdef.glsl  fragmentdeflight.glsl  fragmenttest.glsl  vertex.glsl  vertexCol.glsl  vertexdef.glsl  vertexdeflight.glsl
Dependencies/glfw-3.2.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
Dependencies/glfw-3.2.1/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
Dependencies/glfw-3.2.1/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
Dependencies/glfw-3.2.1/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  windows.vcxproj  windows.vcxproj.filters
Engine/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  ElementBuffer.cpp  ElementBuffer.h  Engine.vcxproj  Engine.vcxproj.filters  Event.h  FileReader.h  FrameBuffer.cpp  FrameBuffer.h  Input.cpp  Input.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  Time.cpp  Time.h  Transform.cpp  Transform.h  VertexArray.cpp  (+7 more)
Engine/Buffer/: ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Components/: ModelComponent.h  RenderComponent.h  TransformComponent.h
Engine/ECS/: CMakeLists.txt  Component.cpp  Component.h  ECS.cpp  ECS.h  ECSManager.cpp  ECSManager.h  System.cpp  System.h  SystemGroup.cpp  SystemGroup.h
Engine/Libraries/include/glad/: glad.h
Engine/Libraries/lib/: glfw3.lib
Engine/Maths/: CMakeLists.txt  Maths.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Engine/Shader/: fragment.glsl  vertex.glsl
